不常用的静态文件压缩

--- a/apps/blog/static/blog/css/account.css
+++ b/apps/blog/static/blog/css/account.css
@@ -1,73 +1,1 @@
-.secondaryAction {
-    color: #868e96;
-}
-.secondaryAction:hover {
-    text-decoration: none;
-    color: #007bff;
-}
-.asteriskField {
-    margin-left: .25rem;
-    color: #dc3545;
-}
-#social-login .login-title {
-    position: relative;
-    display: block;
-    margin-bottom:10px;
-}
-#social-login span {
-    color:#999;
-}
-#social-login span:before,
-#social-login span:after {
-    position: absolute;
-    top: 50%;
-    background: #eee;
-    width: 38%;
-    height: 1px;
-    content: '';
-}
-#social-login span:before {
-    left:0;
-}
-#social-login span:after {
-    right:0;
-}
-.fa-weibo {
-    color: #e12f11;
-    opacity: .8;
-}
-.fa-github {
-    color: #333;
-    opacity: .8;
-}
-.fa-weibo:hover,
-.fa-github:hover {
-    opacity: 1;
-}
-.btn-sm {
-    padding:.2rem .7rem;
-}
-.change_profile .form-control,
-.card-login .form-control {
-    border-radius: 0;
-}
-.change_profile .alert,
-.card-login .alert {
-    border-radius: 0;
-}
-.change_profile .alert li,
-.card-login .alert li {
-    margin-bottom: .5rem;
-}
-.change_profile .alert ul,
-.card-login .alert ul {
-    padding-left:.5rem;
-    margin-bottom: 0;
-}
-#profile-avatar .avatar {
-    width:80px;
-    padding: .25rem;
-    background-color: #fff;
-    border: 1px solid #dee2e6;
-    border-radius: .25rem;
-}
+.secondaryAction{color:#868e96;}.secondaryAction:hover{text-decoration:none;color:#007bff;}.asteriskField{margin-left:.25rem;color:#dc3545;}#social-login .login-title{position:relative;display:block;margin-bottom:10px;}#social-login span{color:#999;}#social-login span:before,#social-login span:after{position:absolute;top:50%;background:#eee;width:38%;height:1px;content:'';}#social-login span:before{left:0;}#social-login span:after{right:0;}.fa-weibo{color:#e12f11;opacity:.8;}.fa-github{color:#333;opacity:.8;}.fa-weibo:hover,.fa-github:hover{opacity:1;}.btn-sm{padding:.2rem .7rem;}.change_profile .form-control,.card-login .form-control{border-radius:0;}.change_profile .alert,.card-login .alert{border-radius:0;}.change_profile .alert li,.card-login .alert li{margin-bottom:.5rem;}.change_profile .alert ul,.card-login .alert ul{padding-left:.5rem;margin-bottom:0;}#profile-avatar .avatar{width:80px;padding:.25rem;background-color:#fff;border:1px solid #dee2e6;border-radius:.25rem;}
