--- a/apps/blog/templates/blog/tags/base_right.html
+++ b/apps/blog/templates/blog/tags/base_right.html
@@ -67,7 +67,7 @@
             {% for hot_article in hot_article_list|slice:":10" %}
                 <li class="py-2">
                     <a href="{{ hot_article.get_absolute_url }}"
-                       title="昨日新增阅读量{{ hot_article.add_view }}">{{ hot_article.title }}</a>
+                       data-last-views="{{ hot_article.add_view }}">{{ hot_article.title }}</a>
                 </li>
             {% endfor %}
         </ul>
