添加自定义markdown规则

--- a/apps/blog/static/blog/css/detail.css
+++ b/apps/blog/static/blog/css/detail.css
@@ -121,6 +121,10 @@
     margin-bottom: .4em;
 }
 
+.article-body .alert p {
+    margin-bottom: .1rem;
+}
+
 .toc a {
     display: block;
     color: rgba(60, 60, 67, .8);
