--- a/apps/blog/static/blog/css/detail.css
+++ b/apps/blog/static/blog/css/detail.css
@@ -31,8 +31,8 @@
     font-weight: 600;
 }
 
-.article-body p {
-    margin-bottom: 1em;
+.article-body li p {
+    margin-bottom: 0;
 }
 
 .article-body ul,
