--- a/apps/blog/templates/blog/detail.html
+++ b/apps/blog/templates/blog/detail.html
@@ -89,7 +89,7 @@
                         </div>
                         <div class="tag-cloud my-4">
                             {% for tag in article.tags.all %}
-                                <a class="tags f-16" href="{{ tag.get_absolute_url }}">{{ tag.name }}</a>
+                                <a class="tags f-16" href="{{ tag.get_absolute_url }}">#{{ tag.name }}</a>
                             {% endfor %}
                         </div>
                         {% include 'blog/tags/reward.html' %}
