--- a/apps/blog/templates/blog/tags/navbar.html
+++ b/apps/blog/templates/blog/tags/navbar.html
@@ -75,7 +75,7 @@
                 <a class="nav-link py-md-3 {% if request.path == about_url %}active{% endif %}"
                    href="{{ about_url }}">关于</a>
             </li>
-            <form class="nav-item navbar-form py-md-2" role="search" method="get" id="searchform"
+            <form class="nav-item navbar-form py-md-2 mr-2" role="search" method="get" id="searchform"
                   action="{% url 'blog:search_view' %}">
                 <div class="input-group">
                     <input type="search" name="q" class="form-control" placeholder="站内搜索" autocomplete="off"
