代码高亮修改

--- a/apps/blog/templates/blog/detail.html
+++ b/apps/blog/templates/blog/detail.html
@@ -31,7 +31,7 @@
         <link href="{% static 'blog/simplemde/1.11.2/simplemde.min.css' %}" rel="stylesheet">
     {% endif %}
     <link href="{% static 'blog/css/detail.css' %}?v={{ static_version.css_blog_detail }}" rel="stylesheet">
-    <link href="{% static 'blog/css/monokai.css' %}?v=20230611.42" rel="stylesheet">
+    <link href="{% static 'blog/css/monokai-2.css' %}?v=20240206.01" rel="stylesheet">
     <link href="{% static 'comment/css/base_comment.css' %}?v=20190114.554" rel="stylesheet">
 {% endblock %}
 
