--- a/apps/blog/templates/blog/detail.html
+++ b/apps/blog/templates/blog/detail.html
@@ -103,7 +103,7 @@
             </div>
             <div class="col-lg-3">
                 <div class="article-toc d-none d-lg-block f-14 rounded-6">
-                    <div class="toc-title f-15"><strong>目录</strong></div>
+                    <div class="toc-title f-15"><strong>大纲</strong></div>
                     {{ article.toc|safe }}
                 </div>
             </div>
