--- a/apps/blog/templates/blog/subjectDetail.html
+++ b/apps/blog/templates/blog/subjectDetail.html
@@ -168,7 +168,7 @@
             </div>
             <div class="col-lg-2 d-none d-lg-block subject-col-2 toc-block">
                 <div class="article-toc f-14 rounded-6">
-                    <div class="toc-title f-15"><strong>目录</strong></div>
+                    <div class="toc-title f-15"><strong>大纲</strong></div>
                     {{ article.toc|safe }}
                 </div>
             </div>
