--- a/apps/blog/static/blog/css/base.css
+++ b/apps/blog/static/blog/css/base.css
@@ -666,6 +666,7 @@ ul.article-view-list > li:nth-child(7):before {
     width: 100%;
     height: 100%;
     backdrop-filter: blur(20px);
+    -webkit-backdrop-filter: blur(20px);
     background-color: hsla(0, 0%, 100%, 0.1);
 }
 
