看板，用户统计显示最后一条数据

--- a/apps/blog/templates/blog/dashboard.html
+++ b/apps/blog/templates/blog/dashboard.html
@@ -303,7 +303,7 @@
                     dataset: {
                         source: [['product', '用户总数']].concat(myUserData)
                     },
-                    xAxis: {type: 'category'},
+                    xAxis: {type: 'category', axisLabel: {showMaxLabel: true}},
                     yAxis: {type: 'value'},
                     series: [
                         {
