--- a/apps/blog/templates/blog/tags/navbar.html
+++ b/apps/blog/templates/blog/tags/navbar.html
@@ -31,16 +31,26 @@
                        href="{{ tool_url }}">在线工具</a>
                 </li>
             {% endif %}
-            <li class="nav-item">
-                {% url 'webstack:webstack_index' as webstack_index_url %}
-                <a class="nav-link py-md-3 {% if request.path == webstack_index_url %}active{% endif %}"
-                   href="{{ webstack_index_url }}">网址导航</a>
+
+            <li class="nav-item dropdown d-xs-block d-sm-none d-lg-block">
+                <a class="nav-link dropdown-toggle py-md-3" href="#" id="more-link" role="button"
+                   data-toggle="dropdown"
+                   aria-haspopup="true"
+                   aria-expanded="false"
+                >扩展功能</a>
+                <div class="dropdown-menu dropdown-menu-left mt-0 border-0" aria-labelledby="navbarDropdown">
+                    {% url 'webstack:webstack_index' as webstack_index_url %}
+                    <a class="dropdown-item pl-3" href="{{ webstack_index_url }}"
+                       title="个人的导航网站">
+                        <i class="fa fa-fw fa-chrome text-info mr-2"></i>网址导航</a>
+                    {% url 'blog:feedhub' as feed_hub_url %}
+                    <a class="dropdown-item pl-3" href="{{ feed_hub_url }}"
+                       title="个人的内容聚合平台">
+                        <i class="fa fa-fw fa-rss-square text-info mr-2"></i>Feed Hub</a>
+                </div>
             </li>
-            <li class="nav-item">
-                {% url 'blog:feedhub' as feed_hub_url %}
-                <a class="nav-link py-md-3 {% if request.path == feed_hub_url %}active{% endif %}"
-                   href="{{ feed_hub_url }}">Feed Hub</a>
-            </li>
+
+
             {% if api_flag %}
                 <li class="nav-item d-xs-block d-sm-none d-lg-block">
                     <a class="nav-link py-md-3" href="{% url 'api:api-root' %}" target="_blank">API</a>
