--- a/apps/blog/templates/blog/tags/navbar.html
+++ b/apps/blog/templates/blog/tags/navbar.html
@@ -1,3 +1,4 @@
+{% load blog_tags %}
 {% load static oauth_tags comment_tags %}
 <nav class="navbar navbar-expand-md bg-white fixed-top blog-navbar py-md-0">
     <a class="navbar-brand d-md-none d-lg-block" id="site-logo-name" href="{% url 'blog:index' %}">
@@ -58,23 +59,8 @@
             {% endif %}
 
             <!-- 个人外链 -->
-            {% if private_links %}
-                <li class="nav-item dropdown d-xs-block d-sm-none d-lg-block">
-                    <a class="nav-link dropdown-toggle py-md-3" href="#" id="more-link" role="button"
-                       data-toggle="dropdown"
-                       aria-haspopup="true"
-                       aria-expanded="false"
-                    >个人外链</a>
-                    <div class="dropdown-menu dropdown-menu-left mt-0 border-0"
-                         aria-labelledby="navbarDropdown">
-                        {% for link_item in private_links %}
-                            <a class="dropdown-item pl-3" href="{{ link_item.link }}" target="_blank"
-                               title="{{ link_item.title }}">
-                                <i class="fa fa-fw {{ link_item.icon }} text-info mr-2"></i>{{ link_item.name }}</a>
-                        {% endfor %}
-                    </div>
-                </li>
-            {% endif %}
+            {% load_menu_link %}
+
             <li class="nav-item">
                 {% url 'blog:friend' as friend_url %}
                 <a class="nav-link py-md-3 {% if request.path == friend_url %}active{% endif %}"
