--- a/apps/blog/templates/blog/tags/navbar.html
+++ b/apps/blog/templates/blog/tags/navbar.html
@@ -104,7 +104,9 @@
                             <a class="dropdown-item pl-3" href="{% url 'admin:index' %}"><i
                                     class="fa fa-fw fa-key text-info mr-2"></i>后台管理</a>
                             <a class="dropdown-item pl-3" href="{% url 'blog:dashboard' %}"><i
-                                    class="fa fa-fw fa-tachometer text-info mr-2"></i>网站看板</a>
+                                    class="fa fa-fw fa-line-chart text-info mr-2"></i>网站看板</a>
+                            <a class="dropdown-item pl-3" href="{% url 'monitor:index' %}"><i
+                                    class="fa fa-fw fa-tachometer text-info mr-2"></i>监控面板</a>
                             <a class="dropdown-item pl-3" href="{% url 'admin:blog_article_add' %}"><i
                                     class="fa fa-fw fa-plus text-info mr-2"></i>新增文章</a>
                         {% endif %}
