feat: 添加新功能，服务监控，对标ServerStatus,添加demo页面

--- a/apps/monitor/templates/monitor/demo.html
+++ b/apps/monitor/templates/monitor/demo.html
@@ -107,6 +107,7 @@
                 </thead>
                 <tbody class="text-center" id="servers"></tbody>
             </table>
+            <div class="text-left small">注：此页面数据为监控面板演示数据，只用来演示监控效果。真实数据需要服务器上报，且管理页面只有管理员有权限查看。</div>
         </div>
     </div>
 
@@ -116,9 +117,9 @@
     <script src="{% static 'monitor/js/monitor.js' %}?v=2024032813"></script>
     <script>
         // 页面打开执行一次
-        get_servers("{{ csrf_token }}", "{% url 'monitor:get_server_list' %}");
+        get_servers("{{ csrf_token }}", "{% url 'monitor:get_server_list_for_demo' %}");
         // 每隔3秒执行一次myFunction函数
-        setInterval(() => get_servers("{{ csrf_token }}", "{% url 'monitor:get_server_list' %}"), 3000);
+        setInterval(() => get_servers("{{ csrf_token }}", "{% url 'monitor:get_server_list_for_demo' %}"), 3000);
     </script>
 {% endblock %}
 
