--- a/apps/blog/templates/blog/tags/navbar.html
+++ b/apps/blog/templates/blog/tags/navbar.html
@@ -48,6 +48,8 @@
                     <a class="dropdown-item pl-3" href="{{ feed_hub_url }}"
                        title="个人的内容聚合平台">
                         <i class="fa fa-fw fa-rss-square text-info mr-2"></i>Feed Hub</a>
+                    <a class="dropdown-item pl-3" href="{% url 'monitor:demo' %}"><i
+                                    class="fa fa-fw fa-tachometer text-info mr-2"></i>监控Demo</a>
                 </div>
             </li>
 
