--- a/apps/monitor/templates/monitor/demo.html
+++ b/apps/monitor/templates/monitor/demo.html
@@ -1,12 +1,12 @@
 {% extends 'blog/base.html' %}
 {% load static blog_tags %}
 
-{% block head_title %}网站看板_Dashboard{% endblock %}
+{% block head_title %}服务监控面板_ServerStatus{% endblock %}
 
 {% block metas %}
     <meta name="description"
           content="本网站是一个采用django+bootstrap4搭建的个人博客，本着学习和分享的精神，博客项目开源，源代码可以到我的Github中查看，网站建站历程可以查看页面Timeline内容。">
-    <meta name="keywords" content="dashboard,看板,访问量统计,统计看板">
+    <meta name="keywords" content="monitor,ServerStatus,看板,服务监控,主机监控">
 {% endblock %}
 
 {% block top-file %}
