feat: 添加新功能，服务监控，对标ServerStatus,添加demo页面

--- a/apps/monitor/templates/monitor/demo.html
+++ b/apps/monitor/templates/monitor/demo.html
@@ -102,7 +102,7 @@
                             <path d="M204.8 102.4h614.4c56.32 0 102.4 46.08 102.4 102.4v614.4c0 56.32-46.08 102.4-102.4 102.4H204.8c-56.32 0-102.4-46.08-102.4-102.4V204.8c0-56.32 46.08-102.4 102.4-102.4z m138.24 153.6L256 317.44l209.92 327.68c20.48 30.72 66.56 30.72 87.04 0L768 317.44 680.96 256 512 512 343.04 256zM256 716.8v102.4h512v-102.4H256z"
                                   fill="#6F8FDF" p-id="47360"></path>
                         </svg>
-                        <span>发行版</span></th>
+                        <span>服务版本</span></th>
                 </tr>
                 </thead>
                 <tbody class="text-center" id="servers"></tbody>
