feat: 添加新功能，服务监控，对标ServerStatus,添加demo页面

--- a/apps/monitor/templates/monitor/demo.html
+++ b/apps/monitor/templates/monitor/demo.html
@@ -107,7 +107,14 @@
                 </thead>
                 <tbody class="text-center" id="servers"></tbody>
             </table>
-            <div class="text-left small">注：此页面数据为监控面板演示数据，只用来演示监控效果。真实数据需要服务器上报，且管理页面只有管理员有权限查看。</div>
+            <div class="text-center small">
+                <div>
+                    此页面数据为监控面板演示数据，只用来演示监控效果。真实数据需要服务器上报，且管理页面只有管理员有权限查看。
+                </div>
+                <div>数据采集客户端使用 Golang 编写，代码仓库查看：<a style="color: coral"
+                                                                    href="https://github.com/Hopetree/GoMonitor"
+                                                                    target="_blank">GoMonitor</a></div>
+            </div>
         </div>
     </div>
 
