style: 样式调整，移动端监控省略一些不重要的属性

--- a/apps/monitor/static/monitor/css/monitor.css
+++ b/apps/monitor/static/monitor/css/monitor.css
@@ -75,3 +75,10 @@
     padding: 0 !important;
     border-top: 0 !important;
 }
+
+
+@media (max-width: 992px) {
+    .monitor-none {
+        display: none !important
+    }
+}
