style: 样式调整，移动端监控省略一些不重要的属性

--- a/apps/monitor/templates/monitor/base.html
+++ b/apps/monitor/templates/monitor/base.html
@@ -28,7 +28,7 @@
                             <path d="M992 509.3H647.5c-10 0-19.5 4.7-25.5 12.7l-58.7 77.3L467 408.7c-5.5-10.8-16.5-17.6-28.6-17.6-12.1 0-23.1 6.8-28.6 17.6L359 509.3H32c-17.7 0-32 14.3-32 32s14.3 32 32 32h346.7c12.1 0 23.1-6.8 28.6-17.6l31.2-61.7 90.9 179.8c5 9.8 14.7 16.4 25.7 17.4 1 0.1 1.9 0.1 2.9 0.1 10 0 19.4-4.7 25.5-12.7l80-105.5H992c17.7 0 32-14.3 32-32s-14.3-31.8-32-31.8z"
                                   fill="#FF336D" p-id="25485"></path>
                         </svg>
-                        <span>状态</span></th>
+                        <span class="monitor-none">状态</span></th>
                     <th id="name">
                         <svg x="1711638254609" class="icon" viewBox="0 0 1024 1024" version="1.1"
                              xmlns="http://www.w3.org/2000/svg" p-id="27718" width="16" height="16">
@@ -37,21 +37,21 @@
                             <path d="M853.333333 693.333333s29.866667-85.333333-81.066666-128c-110.933333-40.533333-168.533333 46.933333-168.533334 46.933334-38.4-36.266667-91.733333-21.333333-91.733333-21.333334-68.266667 19.2-55.466667 85.333333-55.466667 85.333334-34.133333-10.666667-134.4 2.133333-134.4 106.666666s85.333333 123.733333 85.333334 123.733334h443.733333s81.066667-10.666667 81.066667-102.4c2.133333-93.866667-78.933333-110.933333-78.933334-110.933334z"
                                   fill="#F15533" p-id="27720"></path>
                         </svg>
-                        <span>节点</span></th>
+                        <span class="monitor-none">节点</span></th>
                     <th id="uptime">
                         <svg x="1711638368450" class="icon" viewBox="0 0 1024 1024" version="1.1"
                              xmlns="http://www.w3.org/2000/svg" p-id="29762" width="16" height="16">
                             <path d="M735 288V155.2h133.8V66H155.2v89.2h89.2V288c0 60.3 26.2 116.7 73.9 158.8 28.1 24.7 68.8 46.4 110.4 65.1-41.5 18.7-82.3 40.3-110.4 65.1-47.6 42.1-73.9 98.5-73.9 158.8v132.9h-89.2V958h713.5v-89.2H735V735.9c0-60.3-26.2-116.7-73.9-158.8-28.1-24.8-68.8-46.4-110.4-65.1 41.5-18.8 82.3-40.4 110.4-65.2C708.8 404.7 735 348.3 735 288z m-89.2 447.9v110.6H333.6V735.9c0-34.4 15.5-67.1 43.7-92 24.9-22 70.9-43.7 112.4-61.3 41.5 17.6 87.4 39.3 112.4 61.3 28.1 24.9 43.7 57.6 43.7 92z m0-447.9c0 34.4-15.5 67.1-43.7 91.9-24.9 22-70.8 43.7-112.4 61.4-41.5-17.7-87.5-39.4-112.4-61.4-28.2-24.9-43.7-57.6-43.7-92V177.5h312.2V288z"
                                   fill="#34C388" p-id="29763"></path>
                         </svg>
-                        <span>在线天数</span></th>
+                        <span class="monitor-none">在线天数</span></th>
                     <th id="load" class="monitor-none">
                         <svg x="1711638720672" class="icon" viewBox="0 0 1024 1024" version="1.1"
                              xmlns="http://www.w3.org/2000/svg" p-id="39982" width="16" height="16">
                             <path d="M934.22174815 894.4146963H88.07917037c-22.20942222 0-40.2925037 18.08308148-40.2925037 40.2925037 0 22.20942222 18.08308148 40.2925037 40.2925037 40.2925037h846.14257778c22.20942222 0 40.2925037-18.08308148 40.2925037-40.2925037 0-22.20942222-17.96171852-40.2925037-40.2925037-40.2925037zM1014.80675555 572.07466667c0-145.75691852-62.01647408-277.07164445-161.04865185-369.06477037l-33.98162962 80.22091852c70.75460741 75.60912592 114.44527408 176.9472 114.44527407 288.72248888 0 49.51608889-8.98085925 96.84764445-24.63668148 141.02376297 0 22.20942222 19.78216297 40.2925037 44.78293333 40.2925037 22.20942222 0 33.86026667-18.56853333 40.2925037-40.2925037 13.1072-44.66157037 20.14625185-91.99312592 20.14625185-140.9024zM112.71585185 713.09842963c-15.65582222-44.17611852-24.63668148-91.50767408-24.63668148-141.02376296 0-233.6237037 189.44758518-423.07128889 423.07128888-423.07128889 37.13706667 0 72.93914075 5.21860741 107.28485927 14.19946667l55.34151111-67.8418963c-51.09380741-17.47626667-105.70714075-27.06394075-162.62637038-27.06394074-278.16391111 0-503.6562963 225.49238518-503.65629628 503.65629629 0 48.90927408 7.16041482 96.24082963 20.14625185 141.02376297 8.73813333 25.00077037 18.08308148 40.2925037 40.2925037 40.2925037 22.33078518 0.12136297 44.78293333-17.96171852 44.78293333-40.17114074zM390.27294815 541.85528889c0 72.33232592 58.61831111 130.95063703 130.95063703 130.95063703 72.33232592 0 130.95063703-58.61831111 130.95063704-130.95063703 0-22.08805925-5.5826963-42.96248889-15.29173333-61.2882963l169.66542222-404.62411851c13.71401482-32.768 6.67496297-36.77297778-15.89854814-8.8594963l-277.92118519 344.30672592c-68.32734815 4.36906667-122.45522963 61.04557037-122.45522963 130.46518519z m181.31626667 0c0 27.79211852-22.57351111 50.36562963-50.36562964 50.36562963s-50.36562963-22.57351111-50.36562963-50.36562963 22.57351111-50.36562963 50.36562963-50.36562964c27.91348148 0 50.36562963 22.57351111 50.36562964 50.36562964z"
                                   fill="#d81e06" p-id="39983"></path>
                         </svg>
-                        <span>负载</span></th>
+                        <span class="monitor-none">负载</span></th>
                     <th id="network" class="monitor-none">
                         <svg x="1711637783858" class="icon" viewBox="0 0 1433 1024" version="1.1"
                              xmlns="http://www.w3.org/2000/svg" p-id="10453" width="16" height="16">
@@ -60,7 +60,7 @@
                             <path d="M1047.7568 997.6832l306.9952-306.9952h-230.1952V153.8048h-153.6v536.8832H740.864z"
                                   fill="#00D069" p-id="10455"></path>
                         </svg>
-                        <span>网络</span></th>
+                        <span class="monitor-none">网络</span></th>
                     <th id="cpu">
                         <svg x="1711636848552" class="icon" viewBox="0 0 1024 1024" version="1.1"
                              xmlns="http://www.w3.org/2000/svg" p-id="4405" width="16" height="16">
@@ -75,7 +75,7 @@
                             <path d="M155.648 415.744H57.344c-16.384 0-30.72-13.312-30.72-30.72s13.312-30.72 30.72-30.72h98.304c16.384 0 30.72 13.312 30.72 30.72s-14.336 30.72-30.72 30.72zM155.648 540.672H57.344c-16.384 0-30.72-13.312-30.72-30.72 0-16.384 13.312-30.72 30.72-30.72h98.304c16.384 0 30.72 13.312 30.72 30.72s-14.336 30.72-30.72 30.72zM155.648 665.6H57.344c-16.384 0-30.72-13.312-30.72-30.72s13.312-30.72 30.72-30.72h98.304c16.384 0 30.72 13.312 30.72 30.72s-14.336 30.72-30.72 30.72z"
                                   fill="#6462F3" p-id="4410"></path>
                         </svg>
-                        <span>CPU</span>
+                        <span class="monitor-none">CPU</span>
                     </th>
                     <th id="memory">
                         <svg x="1711636999816" class="icon" viewBox="0 0 1024 1024" version="1.1"
@@ -85,7 +85,7 @@
                             <path d="M316 325a8 8 0 0 1 8 8v144a8 8 0 0 1-8 8h-64a8 8 0 0 1-8-8V333a8 8 0 0 1 8-8h64z m152 0a8 8 0 0 1 8 8v144a8 8 0 0 1-8 8h-64a8 8 0 0 1-8-8V333a8 8 0 0 1 8-8h64z m152 0a8 8 0 0 1 8 8v144a8 8 0 0 1-8 8h-64a8 8 0 0 1-8-8V333a8 8 0 0 1 8-8h64z m152 0a8 8 0 0 1 8 8v144a8 8 0 0 1-8 8h-64a8 8 0 0 1-8-8V333a8 8 0 0 1 8-8h64z"
                                   fill="#44D7B6" p-id="5530"></path>
                         </svg>
-                        <span>内存</span>
+                        <span class="monitor-none">内存</span>
                     </th>
                     <th id="disk">
                         <svg x="1711637169370" class="icon" viewBox="0 0 1024 1024" version="1.1"
@@ -95,14 +95,14 @@
                             <path d="M508.16 404.16c-31.36 0-56.96 25.6-56.96 56.96s25.6 56.96 56.96 56.96 56.96-25.6 56.96-56.96-25.6-56.96-56.96-56.96z"
                                   fill="#1890FF" p-id="6696"></path>
                         </svg>
-                        <span>硬盘</span></th>
+                        <span class="monitor-none">硬盘</span></th>
                     <th id="version" class="monitor-none">
                         <svg x="1711638875275" class="icon" viewBox="0 0 1024 1024" version="1.1"
                              xmlns="http://www.w3.org/2000/svg" p-id="47359" width="16" height="16">
                             <path d="M204.8 102.4h614.4c56.32 0 102.4 46.08 102.4 102.4v614.4c0 56.32-46.08 102.4-102.4 102.4H204.8c-56.32 0-102.4-46.08-102.4-102.4V204.8c0-56.32 46.08-102.4 102.4-102.4z m138.24 153.6L256 317.44l209.92 327.68c20.48 30.72 66.56 30.72 87.04 0L768 317.44 680.96 256 512 512 343.04 256zM256 716.8v102.4h512v-102.4H256z"
                                   fill="#6F8FDF" p-id="47360"></path>
                         </svg>
-                        <span>服务版本</span></th>
+                        <span class="monitor-none">服务版本</span></th>
                 </tr>
                 </thead>
                 <tbody class="text-center" id="servers"></tbody>
