style: 样式调整，移动端监控省略一些不重要的属性

--- a/apps/monitor/static/monitor/css/monitor.css
+++ b/apps/monitor/static/monitor/css/monitor.css
@@ -82,3 +82,9 @@
         display: none !important
     }
 }
+
+@media (min-width: 993px) {
+    .monitor-big-none {
+        display: none !important
+    }
+}
