--- a/apps/monitor/templates/monitor/base.html
+++ b/apps/monitor/templates/monitor/base.html
@@ -44,7 +44,7 @@
                             <path d="M735 288V155.2h133.8V66H155.2v89.2h89.2V288c0 60.3 26.2 116.7 73.9 158.8 28.1 24.7 68.8 46.4 110.4 65.1-41.5 18.7-82.3 40.3-110.4 65.1-47.6 42.1-73.9 98.5-73.9 158.8v132.9h-89.2V958h713.5v-89.2H735V735.9c0-60.3-26.2-116.7-73.9-158.8-28.1-24.8-68.8-46.4-110.4-65.1 41.5-18.8 82.3-40.4 110.4-65.2C708.8 404.7 735 348.3 735 288z m-89.2 447.9v110.6H333.6V735.9c0-34.4 15.5-67.1 43.7-92 24.9-22 70.9-43.7 112.4-61.3 41.5 17.6 87.4 39.3 112.4 61.3 28.1 24.9 43.7 57.6 43.7 92z m0-447.9c0 34.4-15.5 67.1-43.7 91.9-24.9 22-70.8 43.7-112.4 61.4-41.5-17.7-87.5-39.4-112.4-61.4-28.2-24.9-43.7-57.6-43.7-92V177.5h312.2V288z"
                                   fill="#34C388" p-id="29763"></path>
                         </svg>
-                        <span class="monitor-none">在线天数</span></th>
+                        <span class="monitor-none">Uptime</span></th>
                     <th id="load" class="monitor-none">
                         <svg x="1711638720672" class="icon" viewBox="0 0 1024 1024" version="1.1"
                              xmlns="http://www.w3.org/2000/svg" p-id="39982" width="16" height="16">
