--- a/apps/blog/templates/blog/tags/carousel.html
+++ b/apps/blog/templates/blog/tags/carousel.html
@@ -19,7 +19,7 @@
                 {% endif %}
                 <a href="{{ each.url }}">
                     <img class="w-100" src="{{ each.img_url }}" alt="{{ each.content }}">
-                    <div class="carousel-caption d-none d-md-block">
+                    <div class="carousel-caption d-none d-md-block py-0">
                         {% if each.title %}<h4>{{ each.title }}</h4>{% endif %}
                         {% if each.content %}<p class="f-14">{{ each.content }}</p>{% endif %}
                     </div>
