feat: 新增Linux时间线工具

--- a/apps/tool/templates/tool/linux_timeline.html
+++ b/apps/tool/templates/tool/linux_timeline.html
@@ -9,7 +9,6 @@
     <meta name="description" content="Linux Timeline，记录Linux各种发行版的关系，图片来源：https://github.com/FabioLolix/LinuxTimeline">
     <meta name="keywords" content="Linux Timeline,LinuxTimeline">
 </head>
-<body style="margin: 0">
-<img src="{% static 'tool/svg/ldt.svg' %}?v22.10" alt="Linux Timeline" width="2200">
-</body>
+<!-- 这里需要将下载的svg另存为html格式 -->
+<body style="margin: 0">{% include 'tool/tags/ldt.html' %}</body>
 </html>
