feat: 非专题文章去掉提纲，便于写非文档类文章

--- a/apps/blog/templates/blog/subject.html
+++ b/apps/blog/templates/blog/subject.html
@@ -59,7 +59,7 @@
                                 <span>{{ subject.get_article_count }}</span>
                             </span>
                         </div>
-                        <div class="alert alert-info my-3 mx-1" role="alert">
+                        <div class="alert alert-primary my-3 mx-1" role="alert">
                             <h3>专题简介</h3>
                             <hr class="mt-0">
                             <p class="mb-0">{{ subject.description }}</p>
