feat: 文章支持打印，且只打印内容部分

--- a/apps/blog/templates/blog/tags/reward.html
+++ b/apps/blog/templates/blog/tags/reward.html
@@ -1,5 +1,5 @@
 {% load static %}
-<div class="text-center">
+<div class="text-center" id="article-reward">
     <button class="btn btn-danger" data-toggle="collapse" data-target=".multi-collapse"
             aria-expanded="false" aria-controls="sponsor-zfb sponsor-wx"
             style="line-height: 1;font-size: .8rem;">
