--- a/apps/blog/templates/blog/subjectDetail.html
+++ b/apps/blog/templates/blog/subjectDetail.html
@@ -43,6 +43,16 @@
         .subject-col-7 {
             margin-bottom: 1.2rem;
         }
+
+        /* 打印的时候忽略一些内容 */
+        @media print {
+            #article-data, #article-breadcrumb, #comment-block, #article-copyright, #article-reward, #article-more, .tag-cloud {
+                display: none;
+            }
+        }
+        #article-print:hover {
+            cursor: pointer;
+        }
     </style>
 {% endblock %}
 
@@ -84,7 +94,7 @@
                 </div>
             </div>
             <div class="col-lg-7 subject-col-7">
-                <nav aria-label="breadcrumb">
+                <nav aria-label="breadcrumb" id="article-breadcrumb">
                     <ol class="breadcrumb bg-white border-0 rounded-6 mb-2 py-2 f-15">
                         <li class="breadcrumb-item">
                             <i class="fa fa-home mr-1"></i><a href="{% url 'blog:index' %}">首页</a>
@@ -116,7 +126,7 @@
                     <div class="card-body px-2 px-md-3 pb-0">
                         <h1 class="card-title text-center font-weight-bold text-info">{{ article.title }}</h1>
                         <hr>
-                        <div class="text-center f-13">
+                        <div class="text-center f-13" id="article-data">
                         <span class="mx-2" data-toggle="tooltip" data-placement="bottom"
                               title="最后编辑于{{ article.update_date|date:'Y年m月d日' }}">发表于 {{ article.create_date|date:'Y年m月d日' }}</span>
                             <span class="mx-2">阅读 {{ article.views }}</span>
@@ -124,7 +134,7 @@
                         </div>
                         <div class="article-body mt-4 f-17" style="line-height:1.8">
                             {{ article.body|safe }}
-                            <blockquote class="p-1 f-14" style="border-left: 4px solid #dc3545;">
+                            <blockquote class="p-1 f-14" style="border-left: 4px solid #dc3545;" id="article-copyright">
                                 <p class="m-1"><strong>版权声明：</strong>如无特殊说明，文章均为本站原创，转载请注明出处</p>
                                 <p class="m-1"><strong>本文链接：</strong>{{ site_url }}{{ article.get_absolute_url }}</p>
                                 <p class="m-1"><strong>许可协议：</strong><a
@@ -140,7 +150,7 @@
                         {% include 'blog/tags/reward.html' %}
                     </div>
                 </div>
-                <div class="more-page-card my-4">
+                <div class="more-page-card my-4" id="article-more">
                     <nav class="more-page f-16">
                         <ul class="pagination justify-content-between">
                             <li class="page-item">
@@ -168,7 +178,10 @@
             </div>
             <div class="col-lg-2 d-none d-lg-block subject-col-2 toc-block">
                 <div class="article-toc f-14 rounded-6">
-                    <div class="toc-title f-15"><strong>大纲</strong></div>
+                    <div class="toc-title f-15">
+                        <strong>大纲</strong>
+                        <i class="fa fa-print mx-1" title="打印文章" id="article-print" onclick="window.print()"></i>
+                    </div>
                     {{ article.toc|safe }}
                 </div>
             </div>
